--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "@mui/x-data-grid": "^6.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "bcrypt": "^5.1.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "js-cookie": "^3.0.1",
