--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-MONGODB={{}}
+MONGODB=mongo db string connection
+SECRET_KEY=jwt secret key
+
 NEXT_PUBLIC_TAX_RATE={{0.15}} # this value must be 0.** 
