--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "@mui/x-data-grid": "^6.0.0",
-    "@types/bcrypt": "^5.0.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -22,6 +21,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "next": "13.2.1",
     "react": "18.2.0",
@@ -31,6 +31,8 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3"
+    "@types/js-cookie": "^3.0.3",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/bcrypt": "^5.0.0"
   }
 }
