--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-slideshow-image": "^4.2.1",
     "swr": "^2.1.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/js-cookie": "^3.0.3",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/bcrypt": "^5.0.0"
+    "@types/jsonwebtoken": "^9.0.1"
   }
 }
