--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ MONGODB=mongo db string connection
 SECRET_KEY=jwt secret key
 
 NEXT_PUBLIC_TAX_RATE={{0.15}} # this value must be 0.** 
+
+# Providers
+GITHUB_ID=
+GITHUB_SECRET=
