starting the configuration of custom auth

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 MONGODB=mongo db string connection
 SECRET_KEY=jwt secret key
+NEXTAUTH_SECRET=jwt secret key
+
 
 NEXT_PUBLIC_TAX_RATE={{0.15}} # this value must be 0.** 
 
